# ebedieyupsultanlilar

./: .gitignore  LICENSE  LICENSE.content.md  README.md  content.config.ts  justfile  llms.txt  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/copilot-prompts/: a11y-review.md  add-person-page.md  seo-review.md
app/: app.config.ts  app.vue  error.vue
app/assets/css/: main.css
app/components/: AudioPlayer.vue
app/components/UI/: FuzzyText.vue
app/composables/: useExternalLinks.ts
app/layouts/: default.vue
app/pages/: [...slug].vue  about.vue  index.vue
app/pages/person/: [slug].vue  index.vue
app/utils/: formatDate.ts  normalizeText.test.ts  normalizeText.ts
content/: README.md
content/en/: index.md
content/en/person/: gonenli-mehmed-efendi.md  mehmet-akif-ersoy.md
content/fr/: index.md
content/fr/person/: gonenli-mehmed-efendi.md  mehmet-akif-ersoy.md
content/home/: index.md
content/person/: ornek-kisi.en.md  ornek-kisi.fr.md  ornek-kisi.tr.md
content/tr/: index.md
content/tr/person/: abdulcelil-levn-celebi.md  abdullah-kir-m.md  abdullah-kirimi.md  abdulmecid-sivas.md  abdurrahman-seref-bey.md  adile-sultan.md  ahmed-davudoglu.md  ahmed-irsoy.md  ahmed-kabakli.md  ahmed-naim-babaniz-de.md  ahmet-h-sim.md  ahmet-kabakli.md  ahmet-suheyl-unver.md  ali-haydar-ahiskav.md  ali-haydar-efendi-ks.md  ali-kuscu.md  ayas-mehmed-pasa.md  b-k-mahmud-abdulb-k.md  (+122 more)
eyyub/: README.md  pyproject.toml
eyyub/src/eyyub/: __init__.py
eyyub/src/eyyub/ai/: schemas.py
i18n/locales/: en-US.json  fr-FR.json  fr.json  tr-TR.json  tr.json
public/: robots.txt
script/: compress-audio.ts  generate-llms.ts  tts.ts
tools/: pyproject.toml
