[project]
name = "eyyub"
version = "0.1.0"
description = "EbediEyupsultanlilar için komut satırı aracı"
readme = "README.md"
authors = [
    { name = "EfraimGENC", email = "efraim@kavimdigital.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
]

[project.scripts]
eyyub = "eyyub:app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
